# home-iptv-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  docker-publish.yml
config/: sources.yaml  xhsuhd.env
src/: main.rs
